tests/snapshots/cli_help__cli_help_daemon_uninstall.snap
---
source: tests/cli_help.rs
expression: help_output(args)
---
Stop starting the daemon at login: remove what `install` wrote

A daemon already running keeps running; the answer says how to stop the one launchd or systemd started. Running it again changes nothing.

Usage: ms-todo daemon uninstall [OPTIONS]

Options:
      --format <FORMAT>
          Output format: jsonl is one object per line, ids one ID per line, csv has a header row [default: table in a terminal, json when piped]

          [possible values: table, json, jsonl, ids, csv]

      --instance <NAME>
          Use a separate copy of ms-todo's data (also MS_TODO_INSTANCE). Builds run from Cargo's target/ directory default to "dev"; "default" is the installed copy

      --fresh
          Before reading, sync and wait, so the answer is as fresh as Microsoft To Do's (a read is otherwise answered from the cache)

      --quiet
          Print nothing on stderr but errors: no notes and no progress

      --no-color
          No colour or bold in tables (also NO_COLOR)

      --context <NAME|none>
          Read this command in this context (from config.toml) rather than the active one; `none` for every list

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
