tests/snapshots/cli_help__cli_help_done.snap
---
source: tests/cli_help.rs
expression: help_output(args)
---
What you completed, by day, newest first: for a standup or a weekly review. Microsoft To Do keeps the day of a completion, not its time

Usage: ms-todo done [OPTIONS]

Options:
      --format <FORMAT>      Output format: jsonl is one object per line, ids one ID per line, csv has a header row [default: table in a terminal, json when piped] [possible values: table, json, jsonl, ids, csv]
      --since <WHEN>         From this day: yesterday, mon (the latest Monday, today included), last week (its Monday), 12 sep, 3 days ago, 2026-09-01 [default: 7 days ago]
      --instance <NAME>      Use a separate copy of ms-todo's data (also MS_TODO_INSTANCE). Builds run from Cargo's target/ directory default to "dev"; "default" is the installed copy
      --until <WHEN>         Up to and including this day, in the same forms [default: today]
      --fresh                Before reading, sync and wait, so the answer is as fresh as Microsoft To Do's (a read is otherwise answered from the cache)
      --list <NAME|ID>       Only this list (exact name or ID) [default: every list]
      --folder <FOLDER>      Only the lists in this folder
      --quiet                Print nothing on stderr but errors: no notes and no progress
      --limit <N>            At most this many, newest first
      --no-color             No colour or bold in tables (also NO_COLOR)
      --context <NAME|none>  Read this command in this context (from config.toml) rather than the active one; `none` for every list
  -h, --help                 Print help
  -V, --version              Print version
